--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-navbar></app-navbar>
+<app-navbar [ngClass]="{'active': navbarActive}"></app-navbar>
 
-<router-outlet>
-
-</router-outlet>
+<div class="page-content container">
+  <router-outlet></router-outlet>
+</div>
