Adicionar rotas, tela inicial, alguns componentes base e melhorias visuais

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import "variables";
-@import "containers";
 @import "scrollbars";
+@import "rows";
+@import "containers";
 
 // Estilos principais
 *,
