--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,11 +2,11 @@
 $font-family: "Public Sans", sans-serif;
 
 // Cores de Fundo
-$bg-default: rgb(29, 27, 34);
-$bg-default-text: rgb(255, 255, 255);
+$bg-default: #242424;
+$bg-default-text: #fff;
 
-$bg-paper: rgb(38, 38, 46);
-$bg-paper-text: rgb(255, 255, 255);
+$bg-paper: #2f2f2f;
+$bg-paper-text: #fff;
 
 // Cores Principais
 $primary: #4ECDC4;
