--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,1 +1,4 @@
-<p>app-footer works!</p>
+<a href="https://github.com/dngadelha/" target="_blank">
+  <p>Desenvolvido por</p>
+  <img src="assets/dng.svg" alt="Danilo Gadelha" />
+</a>
