--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
 :host .page-content {
-  padding: 6rem 1rem 3rem 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 1rem 3rem 1rem;
+  min-height: 100%;
 }
