--- a/src/app/pages/index-page/index-page.component.html
+++ b/src/app/pages/index-page/index-page.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
-<pokemons-list></pokemons-list>
+<app-header [ngClass]="{'active': showAdventure}"></app-header>
+<pokemons-list *ngIf="showAdventure"></pokemons-list>
