--- a/src/app/pokemons/pokemons-list/pokemons-list.component.html
+++ b/src/app/pokemons/pokemons-list/pokemons-list.component.html
@@ -1,11 +1,21 @@
-<card class="search" data-aos="fade-up" data-aos-delay="300">
-  <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-  </svg>
+<div data-aos="fade-up">
+  <card class="search">
+    <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
+      <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+    </svg>
 
-  <input type="text" placeholder="Digite o nome do Pokémon aqui..." [(ngModel)]="search" (ngModelChange)="setSearch($event)" />
-</card>
+    <input type="text" placeholder="Digite o nome do pokémon aqui..." [(ngModel)]="search" (ngModelChange)="setSearch($event)" />
+  </card>
 
-<div class="pokemons-list">
+  <div class="pokemons-list row">
+    <div class="col-12 col-md-6 col-lg-4" *ngFor="let pokemon of pokemons">
+      <pokemons-list-item [pokemon]="pokemon"></pokemons-list-item>
+    </div>
 
+    <div class="col-12" ng-if="pokemons.length === 0">
+      <card class="empty-card">
+        <p>Ainda não capturou nenhum pokémon.</p>
+      </card>
+    </div>
+  </div>
 </div>
