--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,5 +15,8 @@ $primary-text: #000;
 $secondary: #FF6B6B;
 $secondary-text: #000;
 
+// Bordas
+$border-color: #363636;
+
 // Sombras
 $shadow-0: rgb(0 0 0 / 12%) 0px 0px 2px 0px, rgb(0 0 0 / 12%) 0px 16px 16px -4px;
