--- a/src/app/pages/index-page/index-page.component.html
+++ b/src/app/pages/index-page/index-page.component.html
@@ -1,2 +1,7 @@
 <app-header [ngClass]="{'active': showAdventure}"></app-header>
-<pokemons-list *ngIf="showAdventure"></pokemons-list>
+
+<hr data-aos="fade-up" data-aos-delay="0" *ngIf="showAdventure">
+
+<h2 data-aos="fade-up" data-aos-delay="100" *ngIf="showAdventure">Seus Pokémons</h2>
+
+<pokemons-list [type]="'captured'" *ngIf="showAdventure"></pokemons-list>
