--- a/src/app/pages/index-page/index-page.component.scss
+++ b/src/app/pages/index-page/index-page.component.scss
@@ -3,3 +3,13 @@
   flex-direction: column;
   flex-grow: 1;
 }
+
+:host hr {
+  margin: 2rem 0 6rem 0;
+}
+
+:host h2 {
+  margin: 0 0 2rem 0;
+  font-size: 25px;
+  font-weight: 500;
+}
