--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "scrollbars";
 @import "rows";
 @import "containers";
+@import "toasts";
 
 // Estilos principais
 *,
@@ -23,4 +24,14 @@ app-root {
 body {
   background-color: $bg-default;
   color: $bg-default-text;
+}
+
+// Estilos de alguns elementos
+hr {
+  width: 100%;
+  height: 1px;
+  max-height: 1px;
+  border: none;
+  background-color: $border-color;
+  margin: 2rem 0;
 }
