Implementação da captura de Pókemons e melhorias visuais

--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
-<a href="https://github.com/dngadelha/" target="_blank">
+<a href="https://dngadelha.com/" target="_blank">
   <p>Desenvolvido por</p>
-  <img src="assets/dng.svg" alt="Danilo Gadelha" />
+  <img src="assets/logo-dng.svg" title="Danilo Gadelha" alt="Danilo Gadelha" />
 </a>
