--- a/src/app/app-header/app-header.component.scss
+++ b/src/app/app-header/app-header.component.scss
@@ -53,6 +53,7 @@
   object-fit: cover;
   filter: drop-shadow(0 0.5rem 2rem rgba(0, 0, 0, 0.25));
   transform: scale(1.15);
+  pointer-events: none;
 }
 
 @media (max-width: 767.98px) {
