--- a/src/app/pokemons/pokemons-list-item/pokemons-list-item.component.scss
+++ b/src/app/pokemons/pokemons-list-item/pokemons-list-item.component.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "utils";
+
 // Card do pókemon
 :host .pokemon-card {
   display: flex;
@@ -5,6 +8,13 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  transform: none;
+  transition: all 0.2s ease-in-out;
+}
+
+:host .pokemon-card:hover {
+  transform: scale(1.025);
+  background-color: tint($bg-paper, 10%);
 }
 
 // Imagem do pókemon
@@ -12,6 +22,7 @@
   width: 100%;
   max-width: 15rem;
   height: auto;
+  pointer-events: none;
 }
 
 // ID do pókemon
