--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,8 +12,8 @@ $bg-paper-text: #fff;
 $primary: #4ECDC4;
 $primary-text: #000;
 
-$secondary: #FF6B6B;
-$secondary-text: #000;
+$error: #FF6B6B;
+$error-text: #000;
 
 // Bordas
 $border-color: #363636;
