Melhorias na responsividade e adicionar créditos e direitos autorais no rodapé

--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,4 +1,11 @@
-<a href="https://dngadelha.com/" target="_blank">
-  <p>Desenvolvido por</p>
-  <img src="assets/logo-dng.svg" title="Danilo Gadelha" alt="Danilo Gadelha" />
-</a>
+<div class="container container-lg">
+  <a href="https://dngadelha.com/" target="_blank">
+    <p>Desenvolvido por</p>
+    <img src="assets/logo-dng.svg" title="Danilo Gadelha" alt="Danilo Gadelha" />
+  </a>
+
+  <div class="credits">
+    <p>* Ilustração da página inicial feita por <a href="https://www.ricadiaz.com/" target="_blank">Rica Diaz</a>.</p>
+    <p>* A marca "Pokémon" é direito autoral da ©2022 Pokémon. ©1995 - 2022 Nintendo/Creatures Inc./GAME FREAK inc. TM, ®Nintendo.</p>
+  </div>
+</div>
