--- a/src/app/app-footer/app-footer.component.scss
+++ b/src/app/app-footer/app-footer.component.scss
@@ -1,20 +1,26 @@
 @import "variables";
 
+// Rodapé da página
 :host {
   position: relative;
   bottom: 0;
   left: 0;
   right: 0;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 100%;
-  padding: 1.1rem 1.5rem;
+  padding: 3rem 0;
   background-color: rgba(0, 0, 0, 0.075);
   border-top: 1px solid $border-color;
 }
 
+@media (max-width: 767.98px) {
+  :host {
+    padding: 3rem 2rem;
+  }
+}
+
+// Links do rodapé da página
 :host a {
   display: flex;
   flex-direction: row;
@@ -31,6 +37,26 @@
 }
 
 :host img {
-  max-height: 1.75rem;
+  max-height: 1.5rem;
   margin-left: 0.75rem;
+}
+
+// Seção de créditos do rodapé da página
+:host .credits {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 30rem;
+}
+
+:host .credits p {
+  display: inline-block;
+  color: rgba($bg-default-text, 0.5);
+  opacity: 0.5 !important;
+  font-size: 0.8rem;
+  margin: 0.25rem 0 0 0;
+}
+
+:host .credits a {
+  display: inline-block;
 }
