--- a/src/app/app-navbar/app-navbar.component.scss
+++ b/src/app/app-navbar/app-navbar.component.scss
@@ -8,7 +8,6 @@
   align-items: center;
   top: 0;
   width: 100%;
-  padding: 1.1rem 1.5rem;
   background-color: transparent;
   color: $bg-paper-text;
   box-shadow: none;
@@ -30,6 +29,13 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 1.1rem 1.75rem;
+}
+
+@media (max-width: 767.98px) {
+  :host .container {
+    padding: 1.1rem 1rem;
+  }
 }
 
 // Logo da barra de navegação
@@ -46,6 +52,10 @@
   font-size: 1rem;
   font-weight: 500;
   transition: color 0.2s ease-in-out;
+}
+
+:host a:first-child {
+  margin-left: 0;
 }
 
 :host a:hover {
