Implementação da busca de Pókemons na Pokédex e melhorias nos templates dos componentes para utilização do angular-svg-icon

--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,7 +1,7 @@
 <div class="container container-lg">
   <a href="https://dngadelha.com/" target="_blank">
     <p>Desenvolvido por</p>
-    <img src="assets/logo-dng.svg" title="Danilo Gadelha" alt="Danilo Gadelha" />
+    <img src="assets/logos/dngadelha-logo.svg" title="Danilo Gadelha" alt="Danilo Gadelha" />
   </a>
 
   <div class="credits">
