--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -13,6 +13,6 @@
   </div>
 
   <div class="col col-12 col-md-6" data-aos="fade-up" data-aos-delay="200">
-    <img class="header-img" src="assets/illustration.svg" alt="Pokémons" (dragstart)="$event.preventDefault()" />
+    <img class="header-img" src="assets/illustrations/home-illustration.svg" alt="Pokémons" (dragstart)="$event.preventDefault()" />
   </div>
 </div>
