--- a/src/app/pokemons/pokemons-list/pokemons-list.component.html
+++ b/src/app/pokemons/pokemons-list/pokemons-list.component.html
@@ -1,22 +1,31 @@
 <div data-aos="fade-up">
-  <card [ngClass]="{'search': true, 'error': searchHasError}" *ngIf="type === 'captured'">
-    <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
-      <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-    </svg>
+  <card [ngClass]="{'search': true, 'error': searchHasError}">
+    <svg-icon
+      [src]="type === 'captured' ? 'assets/icons/pokeball-icon.svg' : 'assets/icons/search-icon.svg'"
+      [ngClass]="type === 'captured' ? 'pokeball-icon' : 'search-icon'"
+    ></svg-icon>
 
-    <input type="text" placeholder="Digite o nome do pokémon para capturá-lo..." [(ngModel)]="search" (ngModelChange)="setSearch($event)" />
+    <input
+      type="text"
+      [placeholder]="type === 'captured' ? 'Digite o nome do pokémon para capturá-lo...' : 'Digite o nome do pokémon para pesquisá-lo...'"
+      [(ngModel)]="search"
+      (ngModelChange)="setSearch($event)"
+    />
+
     <div class="spinner-border" *ngIf="isCapturingPokemon"></div>
   </card>
 
   <div class="pokemons-list row" #pokemonsList>
     <div class="col col-12 col-md-6 col-lg-3" *ngFor="let pokemon of pokemons">
-      <pokemons-list-item [pokemon]="pokemon"></pokemons-list-item>
+      <pokemons-list-item
+        [pokemon]="pokemon"
+        [search]="search"
+      ></pokemons-list-item>
     </div>
 
     <div class="col-12" *ngIf="pokemons.length === 0">
       <card class="empty-card">
-        <p *ngIf="type === 'all'">Nenhum pokémon para exibir.</p>
-        <p *ngIf="type === 'captured'">Ainda não capturou nenhum pokémon.</p>
+        <p [innerText]="type === 'captured' ? 'Ainda não capturou nenhum pokémon.' : 'Nenhum pokémon encontrado.'"></p>
       </card>
     </div>
   </div>
