--- a/src/app/pokemons/pokemons-list/pokemons-list.component.scss
+++ b/src/app/pokemons/pokemons-list/pokemons-list.component.scss
@@ -15,10 +15,17 @@
 }
 
 // Ícone do campo de busca
-:host .search svg {
+:host .search svg.search-icon {
   width: 1.5rem;
   height: 1.5rem;
   margin-right: 0.5rem;
+  fill: currentColor;
+}
+
+:host .search svg.pokeball-icon {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-right: 0.75rem;
   fill: currentColor;
 }
 
