Ajuste na listagem e captura de pokémons

--- a/src/app/app-header/app-header.component.scss
+++ b/src/app/app-header/app-header.component.scss
@@ -170,6 +170,7 @@
 }
 
 :host .start-div button:disabled {
-  opacity: 0.5;
+  background-color: rgba($primary, 0.5);
+  color: rgba($primary-text, 0.75);
   cursor: default;
 }
